Documentation/Website/styles/app.css
code {
  border: none; }

[data-sticky] {
  width: 100%; }

a {
  text-decoration: none; }
  .asciidoc a {
    text-decoration: underline; }

.page-toc ul {
  list-style-type: none; }
  .page-toc ul.sectlevel1 {
    margin-left: 0px; }
.page-toc nav {
  overflow-y: auto;
  max-height: 92vh; }
  .page-toc nav a.active {
    background-color: #e6e6e6; }

/*# sourceMappingURL=app.css.map */

